--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
 <body>
 
   <h1 id="title">Drum 🥁 Kit</h1>
+  <div>
+    <audio controls>
+      <source src="/gone-girl-197965.mp3" type="audio/ogg">
+      <source src="/gone-girl-197965.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio controls>
+      <source src="/ogi-feel-the-beat-reflections-of-the-time-196147.mp3" type="audio/ogg">
+      <source src="/ogi-feel-the-beat-reflections-of-the-time-196147.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio controls>
+      <source src="/kathmandu-132034 (1).mp3" type="audio/ogg">
+      <source src="/kathmandu-132034 (1).mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio controls>
+      <source src="/g4shi-type-beat-rap-instrumental-2024-199318.mp3" type="audio/ogg">
+      <source src="/g4shi-type-beat-rap-instrumental-2024-199318.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
+  </div>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -23,7 +45,7 @@
 
 
   <footer>
-    Made with Hasan in Fergana.
+    Made with Hasan Azimov
   </footer>
   <script src="/index.js"></script>
 </body>
